# ucair

./: CMakeLists.txt  README.md  binary_fillhole.cxx  canny_filter.cxx  closing_filter.cxx  common.h  connected_comp.cxx  derivative_filter.cxx  dijk.cxx  dilation_filter.cxx  est_density.cxx  fastmarching.cxx  fillhole_filter.cxx  find_path.cxx  fmm_upwind.cxx  gmm.cxx  hessian_eigenvector.cxx  hessian_eigenvector.h  inverse_distmap.cxx  mha_to_nifti.cxx  multiscale_hessian.cxx  myHessianToObjectnessMeasureImageFilter.h  myHessianToObjectnessMeasureImageFilter.hxx  myMultiScaleHessianBasedMeasureImageFilter.h  myMultiScaleHessianBasedMeasureImageFilter.hxx  my_hessian_test.cxx  reg_speed.cxx  test_dilation.cxx  test_hessian_filter.cxx  todo.txt  utility.cxx  utility.h
code/: CMakeLists.txt  common.h  erosion_filter.cxx  extract_lung.cxx  extract_roi.cxx  fastmarching.cxx  find_path.cxx  fmm_upwind.cxx  hessian_eigenvector.cxx  hessian_eigenvector.h  inverse_distmap.cxx  mha_to_nifti.cxx  my_hessian_test.cxx  opening_filter.cxx  test_ffm_upwind.cxx  test_gmm.cxx  utility.cxx  voting_fillhole_filter.cxx
docs/: documentation.tex  vessel_notes.tex
docs/deep_learning/: proposal.tex
scripts/: processing.py  sitkfuncs.py
scripts/malf/: antsMalfLabeling.py
scripts/ml_pruning/: dataVisualizations_brian.ipynb  dataVisualizations_brian_09102014.ipynb  pruning_machine_learning_file07012014.txt
